# cpptask_gsoc2020

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/data/: sample_data.txt  sample_dataresult.txt  test2result.txt  test3.txt  test3result.txt  test4.txt  test4result.txt  test5result.txt
src/labyrinth/: CMakeLists.txt  laby.cpp  laby.h
tests/: CMakeLists.txt  laby_test.cpp
